// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FeedbackWidget /> render feedback widget 1`] = `
<div
  className="d-none"
>
  <div
    className="sequence w-100"
  >
    <div
      className="ml-4 mr-2"
    >
      <ActionRow>
        Rate this page translation
        <Spacer />
        <div>
          <IconButton
            alt="positive-feedback"
            className="m-1"
            iconAs="Icon"
            id="positive-feedback-button"
            onClick={[MockFunction onThumbsUpClick]}
            src="ThumbUpOutline"
            variant="secondary"
          />
          <IconButton
            alt="negative-feedback"
            className="mr-2"
            iconAs="Icon"
            id="negative-feedback-button"
            onClick={[MockFunction onThumbsDownClick]}
            src="ThumbDownOffAlt"
            variant="secondary"
          />
        </div>
        <div
          className="mb-1 text-light action-row-divider"
        >
          |
        </div>
        <div>
          <IconButton
            alt="close-feedback"
            className="ml-1 mr-2 float-right"
            iconAs="Icon"
            id="close-feedback-button"
            onClick={[MockFunction closeFeedbackWidget]}
            src="Close"
            variant="secondary"
          />
        </div>
      </ActionRow>
    </div>
  </div>
</div>
`;

exports[`<FeedbackWidget /> render gratitude text 1`] = `
<div
  className="d-none"
>
  <div
    className="sequence w-100"
  >
    <div
      className="ml-4 mr-4"
    >
      <ActionRow
        className="m-2 justify-content-center"
      >
        Thank you! Your feedback matters.
      </ActionRow>
    </div>
  </div>
</div>
`;

exports[`<FeedbackWidget /> renders hidden by default 1`] = `
<div
  className="d-none"
>
  <div
    className="sequence w-100"
  >
    <div
      className="ml-4 mr-2"
    >
      <ActionRow>
        Rate this page translation
        <Spacer />
        <div>
          <IconButton
            alt="positive-feedback"
            className="m-1"
            iconAs="Icon"
            id="positive-feedback-button"
            onClick={[MockFunction onThumbsUpClick]}
            src="ThumbUpOutline"
            variant="secondary"
          />
          <IconButton
            alt="negative-feedback"
            className="mr-2"
            iconAs="Icon"
            id="negative-feedback-button"
            onClick={[MockFunction onThumbsDownClick]}
            src="ThumbDownOffAlt"
            variant="secondary"
          />
        </div>
        <div
          className="mb-1 text-light action-row-divider"
        >
          |
        </div>
        <div>
          <IconButton
            alt="close-feedback"
            className="ml-1 mr-2 float-right"
            iconAs="Icon"
            id="close-feedback-button"
            onClick={[MockFunction closeFeedbackWidget]}
            src="Close"
            variant="secondary"
          />
        </div>
      </ActionRow>
    </div>
    <div
      className="ml-4 mr-4"
    >
      <ActionRow
        className="m-2 justify-content-center"
      >
        Thank you! Your feedback matters.
      </ActionRow>
    </div>
  </div>
</div>
`;

exports[`<FeedbackWidget /> renders show when elemReady is true 1`] = `
<div
  className="sequence-container d-inline-flex flex-row w-100"
>
  <div
    className="sequence w-100"
  >
    <div
      className="ml-4 mr-2"
    >
      <ActionRow>
        Rate this page translation
        <Spacer />
        <div>
          <IconButton
            alt="positive-feedback"
            className="m-1"
            iconAs="Icon"
            id="positive-feedback-button"
            onClick={[MockFunction onThumbsUpClick]}
            src="ThumbUpOutline"
            variant="secondary"
          />
          <IconButton
            alt="negative-feedback"
            className="mr-2"
            iconAs="Icon"
            id="negative-feedback-button"
            onClick={[MockFunction onThumbsDownClick]}
            src="ThumbDownOffAlt"
            variant="secondary"
          />
        </div>
        <div
          className="mb-1 text-light action-row-divider"
        >
          |
        </div>
        <div>
          <IconButton
            alt="close-feedback"
            className="ml-1 mr-2 float-right"
            iconAs="Icon"
            id="close-feedback-button"
            onClick={[MockFunction closeFeedbackWidget]}
            src="Close"
            variant="secondary"
          />
        </div>
      </ActionRow>
    </div>
    <div
      className="ml-4 mr-4"
    >
      <ActionRow
        className="m-2 justify-content-center"
      >
        Thank you! Your feedback matters.
      </ActionRow>
    </div>
  </div>
</div>
`;
